feat: update react router dependencies

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,31 +1,31 @@
 {
   "name": "@arkyn/server",
   "version": "2.2.3",
+  "author": "Arkyn | Lucas Gonçalves",
   "main": "./dist/bundle.js",
   "module": "./src/index.ts",
-  "type": "module",
-  "types": "./dist/index.d.ts",
-  "license": "Apache-2.0",
-  "author": "Arkyn | Lucas Gonçalves",
-  "description": "Server-side utilities for projects.",
-  "scripts": {
-    "clean": "rm -rf dist",
-    "build": "bun run clean && bunx tsc --project tsconfig.json",
-    "test": "vitest --config vitest.config.ts",
-    "typecheck": "bunx tsc --project tsconfig.json --noEmit"
-  },
   "dependencies": {
     "@arkyn/shared": "*",
     "@aws-sdk/client-s3": "^3.782.0",
     "sharp": "^0.33.5",
     "zod": "^3.24.2"
   },
-  "peerDependencies": {
-    "@remix-run/node": "^2.16.4"
-  },
   "devDependencies": {
     "bun-types": "latest",
     "vitest": "^3.1.1",
     "typescript": "^5.8.3"
-  }
+  },
+  "peerDependencies": {
+    "@react-router/node": ">=7.6.0"
+  },
+  "description": "Server-side utilities for projects.",
+  "license": "Apache-2.0",
+  "scripts": {
+    "clean": "rm -rf dist",
+    "build": "bun run clean && bunx tsc --project tsconfig.json",
+    "test": "vitest --config vitest.config.ts",
+    "typecheck": "bunx tsc --project tsconfig.json --noEmit"
+  },
+  "type": "module",
+  "types": "./dist/index.d.ts"
 }
