--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -13,11 +13,13 @@
   "dependencies": {
     "@react-google-maps/api": "^2.20.6",
     "@react-input/mask": "^1.2.15",
-    "@remix-run/react": "^2.16.2",
     "lucide-react": "^0.424.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
     "zod": "^3.24.2"
+  },
+  "peerDependencies": {
+    "react": ">=18.3.1",
+    "react-dom": ">=18.3.1",
+    "react-router": ">=7.6.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.20",
