feat(server): refactor file upload and S3 integration
- Replace @remix-run/node with @mjackson/multipart-parser for file handling
- Improve error handling and temporary file management
- Optimize image processing and compression
- Update AWS S3 upload process
- Add peer dependency for @react-router/node
- Remove direct dependencies on React and React DOM in shared package

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@arkyn/shared": "*",
     "@aws-sdk/client-s3": "^3.782.0",
+    "@mjackson/multipart-parser": "^0.8.2",
     "sharp": "^0.33.5",
     "zod": "^3.24.2"
   },
