chore(release): bump version to 2.2.6
- Update version to 2.2.6 in package.json files for @arkyn/components, @arkyn/server, @arkyn/shared, @arkyn/templates, and @arkyn/types
- Update main entry point for @arkyn/components to ./dist/index.js
- Update package-lock.json with new version numbers

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@arkyn/components",
-  "version": "2.2.5",
-  "main": "./dist/bundle.js",
+  "version": "2.2.6",
+  "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "author": "Lucas Gonçalves",
   "type": "module",
