--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@arkyn/components",
-  "version": "2.2.6",
-  "main": "./dist/index.js",
+  "version": "2.2.7",
+  "main": "./src/index.ts",
   "types": "./dist/index.d.ts",
   "author": "Lucas Gonçalves",
   "type": "module",
