--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@arkyn/components",
-  "version": "2.2.7",
+  "version": "2.2.8",
   "main": "./src/index.ts",
   "types": "./dist/index.d.ts",
   "author": "Lucas Gonçalves",
@@ -24,8 +24,8 @@
     "slate-react": "^0.110.3"
   },
   "peerDependencies": {
-    "react": ">=18.3.1",
-    "react-dom": ">=18.3.1",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-router": ">=7.6.0"
   },
   "devDependencies": {
