chore(release): bump version to 2.2.10
- Update package versions from 2.2.9 to 2.2.10 for @arkyn/components, @arkyn/server, @arkyn/shared, @arkyn/templates, and @arkyn/types
- Change main entry point for @arkyn/components to ./dist/bundle.js
- Remove 'ssr: true' from vite.config.js in @arkyn/components

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@arkyn/components",
-  "version": "2.2.9",
-  "main": "./src/index.ts",
+  "version": "2.2.10",
+  "main": "./dist/bundle.js",
   "types": "./dist/index.d.ts",
   "author": "Lucas Gonçalves",
   "type": "module",
