chore(deps): upgrade packages to v2.2.11 and add @vitejs/plugin-react
- Bump @arkyn/components, @arkyn/server, @arkyn/shared, @arkyn/templates, and @arkyn/types from 2.2.10 to 2.2.11
- Add @vitejs/plugin-react v4.4.1 as a dependency to @arkyn/components
- Configure Vite to use React plugin in @arkyn/components

--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@arkyn/components",
-  "version": "2.2.10",
+  "version": "2.2.11",
   "main": "./dist/bundle.js",
   "types": "./dist/index.d.ts",
   "author": "Lucas Gonçalves",
@@ -13,6 +13,7 @@
   "dependencies": {
     "@react-google-maps/api": "^2.20.6",
     "@react-input/mask": "^1.2.15",
+    "@vitejs/plugin-react": "^4.4.1",
     "framer-motion": "^11.18.2",
     "html-react-parser": "^5.2.2",
     "is-hotkey": "^0.2.0",
