--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -25,8 +25,8 @@
     "slate-react": "^0.110.3"
   },
   "peerDependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": ">=18.0.0",
+    "react-dom": ">=18.0.0",
     "react-router": ">=7.6.0"
   },
   "devDependencies": {
