--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@arkyn/shared",
-  "version": "3.0.0",
+  "version": "3.0.1-beta.0",
   "main": "./dist/bundle.js",
   "module": "./src/index.ts",
   "type": "module",
